test_suite/tests/ui/conflict/alias.stderr
error: expected expression, found `@`
  --> tests/ui/conflict/alias.rs:41:5
   |
41 |     @//fail
   |     ^ expected expression

warning: unreachable pattern
  --> tests/ui/conflict/alias.rs:13:5
   |
8  |     #[serde(alias = "a", alias = "b", alias = "c")]
   |                                  --- matches all the relevant values
...
13 |     b: (),
   |     ^ no value can reach this
   |
   = note: `#[warn(unreachable_patterns)]` on by default

warning: unreachable pattern
  --> tests/ui/conflict/alias.rs:12:21
   |
8  |     #[serde(alias = "a", alias = "b", alias = "c")]
   |                                               --- matches all the relevant values
...
12 |     #[serde(alias = "c")]
   |                     ^^^ no value can reach this

warning: unreachable pattern
  --> tests/ui/conflict/alias.rs:26:22
   |
23 |     #[serde(alias = "b", alias = "c")]
   |                                  --- matches all the relevant values
...
26 |     #[serde(rename = "c")]
   |                      ^^^ no value can reach this

warning: unreachable pattern
  --> tests/ui/conflict/alias.rs:37:5
   |
35 |     #[serde(alias = "B", alias = "c")]
   |                     --- matches all the relevant values
36 |     a: (),
37 |     b: (),
   |     ^ no value can reach this
